--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <common-parent.deployUrl>https://maven.cloudsmith.io/anand-beh/lesser-gpl3/</common-parent.deployUrl>
         <common-parent.skipJavadoc>false</common-parent.skipJavadoc>
         <common-parent.skipSources>false</common-parent.skipSources>
+        <common-parent.asmVersion>9.1</common-parent.asmVersion>
     </properties>
     
     <scm>
@@ -81,6 +82,19 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
                     <version>3.1.2</version>
+                    <!-- Fix analysis of test classes when using JDK 16 -->
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.ow2.asm</groupId>
+                            <artifactId>asm</artifactId>
+                            <version>${common-parent.asmVersion}</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>org.ow2.asm</groupId>
+                            <artifactId>asm-commons</artifactId>
+                            <version>${common-parent.asmVersion}</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
