--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>space.arim.parent</groupId>
     <artifactId>common-parent</artifactId>
-    <version>0.2.5</version>
+    <version>0.2.6-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -17,7 +17,7 @@
     
     <scm>
         <developerConnection>scm:git:https://github.com/A248/common-parent.git</developerConnection>
-      <tag>0.2.5</tag>
+      <tag>HEAD</tag>
   </scm>
     
     <build>
