--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>space.arim.parent</groupId>
     <artifactId>common-parent</artifactId>
-    <version>0.4.3-SNAPSHOT</version>
+    <version>0.4.3</version>
     <packaging>pom</packaging>
 
     <properties>
@@ -18,7 +18,7 @@
         <connection>scm:git:ssh://git@github.com/A248/common-parent.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/A248/common-parent.git</developerConnection>
         <url>http://github.com/A248/common-parent</url>
-      <tag>HEAD</tag>
+      <tag>0.4.3</tag>
   </scm>
 
     <build>
